# frei0r-lines-video-filter

./: .gitignore  CMakeLists.txt  LICENSE  README.MD  frei0r straight lines filter.sln
cmake/: Findfrei0r.cmake
exp/: exp.cpp  exp.vcxproj  exp.vcxproj.filters
frei0r straight lines filter/: filter.cpp  frei0r straight lines filter.vcxproj.filters
src/: CMakeLists.txt  FrameHandler.cpp  FrameHandler.h  filter.cpp  frei0r straight lines filter.vcxproj
